--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 		<repository>
 			<id>maven-repo</id>
 			<name>maven-repo</name>
-			<url>file://C:\Users\littejedi\.m2\repository</url>
+			<url>file://C:\Users\littlejedi\.m2\repository</url>
 		</repository>
 	</distributionManagement>
 
