--- a/pom.xml
+++ b/pom.xml
@@ -2,15 +2,16 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.zeedoo</groupId>
-	<artifactId>core-domain</artifactId>
-	<version>0.13-SNAPSHOT</version>
+	<artifactId>zeedoo-commons</artifactId>
+	<version>0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>core-domain</name>
+	<name>zeedoo-commons</name>
 	<url>http://maven.apache.org</url>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<spring.version>3.2.3.RELEASE</spring.version>
 		<dropwizard.version>0.6.2</dropwizard.version>
 	</properties>
 
@@ -30,6 +31,13 @@
 	</distributionManagement>
 
 	<dependencies>
+	    <!-- Spring -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+	    
 		<!-- Google -->
 		<dependency>
 			<groupId>com.google.guava</groupId>
@@ -48,6 +56,33 @@
 			<groupId>joda-time</groupId>
 			<artifactId>joda-time</artifactId>
 			<version>2.2</version>
+		</dependency>
+		
+		<!--  myBatis -->
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis</artifactId>
+			<version>3.1.1</version>
+		</dependency>
+		
+		<!-- Logging -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.7.2</version>
+		</dependency>
+				
+		<!-- MX4J -->
+		<dependency>
+			<groupId>mx4j</groupId>
+			<artifactId>mx4j-tools</artifactId>
+			<version>3.0.1</version>
 		</dependency>
 		
 		<!-- Jackson -->
