--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,13 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.2.0</version>
         </dependency>
+        
+         <!-- For serializing/deserializing Joda DateTime objects -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-joda</artifactId>
+			<version>2.1.1</version>
+		</dependency>
 
 		<!-- Test -->
 		<dependency>
