--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.zeedoo</groupId>
 	<artifactId>zeedoo-commons</artifactId>
-	<version>0.11-SNAPSHOT</version>
+	<version>0.11</version>
 	<packaging>jar</packaging>
 
 	<name>zeedoo-commons</name>
@@ -20,7 +19,7 @@
 		<developerConnection>scm:git:git@github.com:littlejedi/zeedoo-commons.git</developerConnection>
 		<url>http://github.com/littlejedi/zeedoo-commons</url>
 		<connection>scm:git:git@github.com:littlejedi/zeedoo-commons.git</connection>
-		<tag>HEAD</tag>
+		<tag>zeedoo-commons-0.11</tag>
 	</scm>
 
 	<distributionManagement>
